[package]
name = "hstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
libc = { version = "0.2.122", default-features = false }
structopt = "0.3"
tokio = { version = "1.20", features = ["time", "fs", "macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = { version = "0.1.9", features = ["sync", "net", "io-util"] }
